--- a/weekwork1/pom.xml
+++ b/weekwork1/pom.xml
@@ -15,17 +15,54 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
+      <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>4.3.19.RELEASE</version>
+    </dependency>
+
+    <!--MySQL架包-->
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.39</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>4.3.19.RELEASE</version>
+    </dependency>
+
+    <!--DBCP连接池-->
+
+
+    <!--&lt;!&ndash;dbutils架包&ndash;&gt;-->
+    <!--&lt;!&ndash; https://mvnrepository.com/artifact/commons-dbutils/commons-dbutils &ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>commons-dbutils</groupId>-->
+      <!--<artifactId>commons-dbutils</artifactId>-->
+      <!--<version>1.7</version>-->
+    <!--</dependency>-->
+    <!--&lt;!&ndash;C3P0架包&ndash;&gt;-->
+    <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.mchange/c3p0 &ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>com.mchange</groupId>-->
+      <!--<artifactId>c3p0</artifactId>-->
+      <!--<version>0.9.5.2</version>-->
+    <!--</dependency>-->
   </dependencies>
 
   <build>
